--- a/index.html
+++ b/index.html
@@ -252,30 +252,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <div class="mbr-row mbr-justify-content-center">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
         <div class="lrsp">
-          <a href="huu-ich/nghi-luc"><amp-img src="images/bookkeeping.jpeg" layout="responsive" height="233" width="350" alt="Ghi sổ"></amp-img></a>
-          <div class="center"><h3>Nghị-lực để có dư tiền</h3></div>
-          <p>Nghị-lực để chọn giữa sự thoả-mãn trước-mắt và lợi-ích lâu-dài.
-	  <br><a href="huu-ich/nghi-luc">Nghị-lực</a> sẽ giúp bạn lập ngân-sách, kiểm-soát chi-tiêu, tích-luỹ đầu-tư lâu-dài và trở nên giàu.
-          </p>
-        </div>
-      </div>
-
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
-        <div class="lrsp">
-          <a href="huu-ich/hieu-qua-dau-tu"><amp-img src="images/goldcoingrow.jpg" layout="responsive" height="233" width="350" alt="Long-term investment"></amp-img></a>
-          <div class="center"><h3>Tính hiệu-quả khi đầu-tư</h3></div>
-          <p>So-sánh <a href="huu-ich/hieu-qua-dau-tu">hiệu-quả các vụ đầu-tư</a> từ năm 2002 của tôi.
-          <br>Hiệu-quả của việc đầu-tư được tính bằng tốc-độ tăng tài-sản chứ không phải lượng tài-sản tăng thêm.
-          </p>
-        </div>
-      </div>
-
-      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
-        <div class="lrsp">
-          <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"><amp-img src="data/VFM.png" layout="responsive" height="233" width="350" alt="Kết-quả quỹ-đầu-tư"></amp-img></a>
-          <div class="center"><h3>Gửi ngân-hàng hay quỹ-đầu-tư</h3></div>
-          <p>So-sánh lợi-nhuận của <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">gửi tiết-kiệm và quỹ-đầu-tư</a>.
-          <br>Gửi ngân-hàng ngắn-hạn và gửi quỹ-đầu-tư dài-hạn là thích-hợp nhất.
+          <a href="huu-ich/nghi-luc"><amp-img src="images/emergency2.jpg" layout="responsive" height="233" width="350" alt="Emergency information in Android"></amp-img></a>
+          <div class="center"><h3>Những điều NÊN và KHÔNG NÊN</h3></div>
+          <p>Bài <strong><span class="red">MỚI</span></strong>: Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện, kèm theo rủi ro khi dùng những dịch vụ đó. Những điều <a href="kinh-nghiem/linh-tinh/can-biet">NÊN và KHÔNG NÊN</a> làm để thêm lợi ích và bớt rủi ro.
           </p>
         </div>
       </div>
@@ -302,8 +281,28 @@ div.footer { font-size: 80%; color: red; text-align: center; }
         <div class="lrsp">
           <a href="kinh-nghiem/may-tinh/pi-network"><amp-img src="images/pi-network_ex.jpg" layout="responsive" width="350" height="233" alt="Pi"></amp-img></a>
           <div class="center"><h3>Tiền-mật-mã Pi</h3></div>
-          <p>Bài <strong><span class="red">MỚI</span></strong>: Giới-thiệu <a href="kinh-nghiem/may-tinh/pi-network">tiền-mật-mã cho mọi người: Pi</a>.
+          <p>Giới-thiệu <a href="kinh-nghiem/may-tinh/pi-network">tiền-mật-mã cho mọi người: Pi</a>.
           <br>Một loại tiền-mật-mã mà mọi người trên toàn thế-giới đều dùng được một cách dễ-dàng.
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="huu-ich/hieu-qua-dau-tu"><amp-img src="images/goldcoingrow.jpg" layout="responsive" height="233" width="350" alt="Long-term investment"></amp-img></a>
+          <div class="center"><h3>Tính hiệu-quả khi đầu-tư</h3></div>
+          <p>So-sánh <a href="huu-ich/hieu-qua-dau-tu">hiệu-quả các vụ đầu-tư</a> từ năm 2002 của tôi.
+          <br>Hiệu-quả của việc đầu-tư được tính bằng tốc-độ tăng tài-sản chứ không phải lượng tài-sản tăng thêm.
+          </p>
+        </div>
+      </div>
+
+      <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4 last-child">
+        <div class="lrsp">
+          <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"><amp-img src="data/VFM.png" layout="responsive" height="233" width="350" alt="Kết-quả quỹ-đầu-tư"></amp-img></a>
+          <div class="center"><h3>Gửi ngân-hàng hay quỹ-đầu-tư</h3></div>
+          <p>So-sánh lợi-nhuận của <a href="huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">gửi tiết-kiệm và quỹ-đầu-tư</a>.
+          <br>Gửi ngân-hàng ngắn-hạn và gửi quỹ-đầu-tư dài-hạn là thích-hợp nhất.
           </p>
         </div>
       </div>
@@ -329,6 +328,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -357,6 +357,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
