--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -240,7 +240,7 @@ Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện,
 <h2 id="dtdd">Khi dùng điện thoại di động</h2>
 <dl>
 <dt>KHÔNG NÊN gọi lại những cuộc gọi lỡ từ số lạ</dt>
-<dd>Nếu người gọi thật sự cần liên lạc với bạn, họ sẽ gọi lại hoặc nhắn tin. Trừ khi bạn đang có thứ gì để bán, bạn không cần phải gọi đến số mà bạn không biết. Và bạn cũng nên tập thói quen <a href="/kinh-nghiem/may-tinh/OTT-apps">nhắn tin sau khi gọi mà không được trả lời</a>.</dd>
+<dd>Nếu người gọi thật sự cần liên lạc với bạn, họ sẽ gọi lại hoặc nhắn tin. Trừ khi bạn đang có thứ gì để bán, bạn không cần phải gọi đến số mà bạn không biết. Và bạn cũng NÊN tập thói quen <a href="/kinh-nghiem/may-tinh/OTT-apps">nhắn tin sau khi gọi mà không được trả lời</a>.</dd>
 <dt>KHÔNG NÊN lo sợ khi bị doạ có thư khởi tố hay bắt giam</dt>
 <dd>Gọi điện thoại thông báo khởi tố hay bắt giam chỉ là trò lừa đảo để người nghe lo sợ rồi giao tiền cho công an giả giữ giùm.</dd>
 </dl>
