--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <div class="mbr-row mbr-justify-content-center">
       <div class="mbr-col-sm-12 mbr-col-md-6 mbr-col-lg-4">
         <div class="lrsp">
-          <a href="huu-ich/nghi-luc"><amp-img src="images/emergency2.jpg" layout="responsive" height="233" width="350" alt="Emergency information in Android"></amp-img></a>
+          <a href="kinh-nghiem/linh-tinh/can-biet"><amp-img src="images/emergency2.jpg" layout="responsive" height="233" width="350" alt="Emergency information in Android"></amp-img></a>
           <div class="center"><h3>Những điều NÊN và KHÔNG NÊN</h3></div>
           <p>Bài <strong><span class="red">MỚI</span></strong>: Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện, kèm theo rủi ro khi dùng những dịch vụ đó. Những điều <a href="kinh-nghiem/linh-tinh/can-biet">NÊN và KHÔNG NÊN</a> làm để thêm lợi ích và bớt rủi ro.
           </p>
