--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -348,7 +348,7 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <dl>
 <dt>NÊN mở cửa sổ web browser riêng tư mới và đóng cửa sổ đó ngay sau khi dùng xong</dt>
 <dd>Web browser sẽ không ghi lại những gì bạn đã làm trong cửa sổ riêng tư, không có cache trang web, không có lịch sử xem web…</dd>
-<dt>KHÔNG NÊN gõ password của những dịch vụ không lớp bảo vệ thứ hai</dt>
+<dt>KHÔNG NÊN gõ password của những dịch vụ không có lớp bảo vệ thứ hai</dt>
 <dd>Bạn, và có khi người chủ máy cũng, không thể biết máy tính đó có phần mềm trộm password hay không. Nếu bạn bị trộm mất password mà không có lớp bảo vệ thứ hai thì bạn đã mất tài khoản đó.</dd>
 <dt>KHÔNG NÊN cắm USB drive hoặc smartphone</dt>
 <dd>Bạn, và có khi người chủ máy cũng, không thể biết máy tính đó có virus hay không. Virus có thể nhiễm vào USB drive hoặc smartphone của bạn rồi nhiễm vào máy của bạn. Virus sẽ làm hư tất cả file trong máy của bạn.
