--- a/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
+++ b/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
@@ -308,12 +308,7 @@ data-ad-slot="5275186684">
   <p>Các giao dịch của một tài khoản quỹ đầu tư:
   <ul>
     <li>Mua đơn vị quỹ: thêm một dòng mới dưới dòng 2, ghi ngày nộp tiền vào ô A3, số tiền đã gửi vào quỹ (mang dấu trừ) vào B3, giá đơn vị quỹ vào C3, cập nhật số đơn vị quỹ vào công thức trong B2.</li>
-    <li>Bán đơn vị quỹ:
-    <ul>
-      <li>nếu bán hết tất cả số đơn vị quỹ thì sửa dòng số 2,</li>
-      <li>nếu chưa bán hết thì thêm một dòng mới dưới dòng 2, cập nhật số đơn vị quỹ vào công thức trong B2</li>
-    </ul>
-    ghi ngày nộp tiền vào ô A, số tiền đã rút khỏi quỹ vào ô B, giá đơn vị quỹ vào ô C.</li>
+    <li>Bán đơn vị quỹ: thêm một dòng mới dưới dòng 2, cập nhật số đơn vị quỹ vào công thức trong B2, ghi ngày rút tiền vào ô A3, số tiền đã rút khỏi quỹ vào ô B3, giá đơn vị quỹ vào ô C2.</li>
   </ul>
   <p>Với tài khoản quỹ đầu tư có nhiều loại quỹ (hợp đồng bảo hiểm nhân thọ liên kết quỹ đầu tư có nhiều quỹ) cho phép chuyển quỹ dễ dàng thì ta có thể ghi chú loại quỹ của mỗi giao dịch trong cột C.
   <h3>1.3. Bất động sản</h3>
@@ -353,6 +348,7 @@ data-ad-slot="5275186684">
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -381,6 +377,7 @@ data-ad-slot="5275186684">
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
