add signing, VNeID

--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -226,7 +226,7 @@ data-ad-slot="5275186684">
 
 <!-- body here -->
   <h1>Cách bảo vệ tài sản trong thời đại số hoá</h1>
-<div class="right">Viết lần đầu trong Tháng Ba, 2020.</div>
+<div class="right">Viết lần đầu trong Tháng Ba, 2020. Sửa lần cuối trong Tháng Mười Một, 2021.</div>
 <h2>Tài sản trong thời đại số hoá có gì khác?</h2>
 <p>Thời nay đa số người ta đều có một thứ tài sản đặc biệt cần giữ là các file: file hình/video chụp bằng camera/phone, file nhạc để nghe bằng phone/computer, tài liệu soạn ra khi làm việc và ghi chép cá nhân… Mặc dù cách dùng các file đó khác nhau nhưng bên trong mỗi file chỉ chứa toàn các số 0 và 1 cho nên chúng ta gọi đó là <b>tài sản số hoá</b>. Những tài sản số hoá đều có một giá trị vật chất hoặc tinh thần nào đó. Chúng có giá trị vật chất khi chúng ta có thể bán, cho thuê, ví dụ như bán những tấm hình đẹp, cho người ta xem những video clip để thu tiền quảng cáo… Một vài loại tài sản số hoá có giá trị vật chất rất cụ thể là tài khoản ngân hàng, ví điện tử, giá trị của những tài sản này bằng số tiền có trong tài-khoản hoặc ví.
 <br>Những tài sản số hoá đó được tạo ra và giữ trong thẻ nhớ, USB drive, ổ đĩa cứng, smartphone… và chúng rất dễ bị mất đi vì vật chứa bị mất hay hư bất ngờ hoặc người chủ lỡ tay xoá mất.</p>
@@ -248,7 +248,7 @@ data-ad-slot="5275186684">
 </ul>
 
 <h2>Bảo vệ password</h2>
-<p>Bây giờ có quá nhiều dịch vụ được cung cấp (miễn phí hoặc có thu phí) qua Internet. Để sử dụng dịch vụ thì chúng ta phải được server xác nhận bằng cách trả lời password. Dùng máy tính và smartphone cá nhân cũng cần password. Một số file đặc biệt quan trọng trong máy cá nhân cũng cần password riêng để mở.</p>
+<p>Bây giờ có quá nhiều dịch vụ được cung cấp (miễn phí hoặc có thu phí) qua Internet. Để sử dụng dịch vụ thì chúng ta phải được server xác thực bằng cách trả lời password. Dùng máy tính và smartphone cá nhân cũng cần password. Một số file đặc biệt quan trọng trong máy cá nhân cũng cần password riêng để mở.</p>
 <p>Những người mới làm quen với máy tính và smartphone thường dùng những password đơn giản. Kẻ gian cũng biết điều đó nên chúng có một danh sách rất dài những password thường gặp và chúng dùng phần mềm để thử lần lượt các password đó để cố login vào các server nhằm tìm kiếm những thông tin riêng tư. Để tránh bị mất tài sản số hoá do password quá đơn giản thì mỗi người phải tập dùng password rắc rối hơn, một số server cũng chỉ cho dùng password không quá đơn giản.</p>
 <p>Làm sao nhớ hết được quá nhiều password thật rắc rối ở quá nhiều nơi như vậy?</p>
 
@@ -307,14 +307,22 @@ Ngoài việc dùng password để login vào các dịch vụ web, password cò
 <p>Authy là app chạy trong smartphone (và Linux, Mac, Windows) để tạo OTP cho nhiều dịch vụ trong Internet. Sau khi cài Authy vào máy, bạn đăng ký sử dụng bằng một địa chỉ email và cung cấp một số điện thoại để bắt đầu dùng, sau đó bạn bảo vệ app Authy của bạn bằng một password và một PIN. Bạn nên ghi các thông tin đó vào KeePass để dùng khi cần cài lại Authy.
 <br>Sau khi cài và đăng ký account Authy, bạn bắt đầu đưa các dịch vụ cần bảo vệ bằng OTP vào Authy. Các dịch vụ phổ biến dùng được với Authy là Google, Facebook, Microsoft, Firefox, pCloud. Danh sách đầy đủ các dịch vụ được ghi ở <a href="https://twofactorauth.org/" target='_blank'>Two Factor Auth</a>.</p>
 <p>Bạn có thể cài Authy trên vài máy cá nhân với cùng một account Authy. Khi đó OTP cho các dịch vụ được bảo vệ sẽ đồng bộ ở tất cả những máy đó. Nếu bạn lỡ mất hoặc xoá Authy ở  một máy thì vẫn dùng được Authy ở các máy khác.
-<br>Nếu bạn chỉ có một máy cài Authy mà bị mất, bạn phải cài lại Authy để dùng. Khi cài lại Authy bạn sẽ dùng lại địa chỉ email, password đã ghi nhớ lúc trước, và bạn phải xác nhận bằng một OTP nhận qua số điện thoại đã đăng ký.</p>
-<h2>Vật xác nhận nhân thân</h2>
-<p>Ở mức độ an toàn hơn password và  OTP, các server yêu cầu người dùng chứng tỏ không giả mạo bằng một vật không thể sao chép được, ví dụ như vân tay hay <a href="https://fidoalliance.org/how-fido-works/" target='_blank'>authenticator</a> (security key, chìa khoá an ninh kỹ thuật số). Khi dùng phương pháp xác nhận này thì password không còn cần thiết nữa.
+<br>Nếu bạn chỉ có một máy cài Authy mà bị mất, bạn phải cài lại Authy để dùng. Khi cài lại Authy bạn sẽ dùng lại địa chỉ email, password đã ghi nhớ lúc trước, và bạn phải xác thực bằng một OTP nhận qua số điện thoại đã đăng ký.</p>
+<h2>Vật xác thực danh tính</h2>
+<p>Ở mức độ an toàn hơn password và  OTP, các server yêu cầu người dùng chứng tỏ không giả mạo bằng một vật không thể sao chép được, ví dụ như vân tay hay <a href="https://fidoalliance.org/how-fido-works/" target='_blank'>authenticator</a> (security key, chìa khoá an ninh kỹ thuật số). Khi dùng phương pháp xác thực này thì password không còn cần thiết nữa.
 <br>Phần mềm của dịch vụ sẽ liên lạc với đầu đọc vân tay (có sẵn trong máy hoặc nối với máy tính qua USB hoặc Bluetooth) để đọc vân tay của người dùng trước khi bắt đầu giao dịch.</p>
 <div class="flright"><div class="right">Hình từ <a href="https://www.theverge.com/2019/2/22/18235173/the-best-hardware-security-keys-yubico-titan-key-u2f" target='_blank'>TheVerge.com</a></div><amp-img alt="Fido keys" src="/images/fidokey.png" width="452" height="254" layout="responsive"></amp-img></div>
 <p>Authenticator là một máy mã hoá nhỏ như cái móng tay. Nó chứa chìa khoá riêng (private key) của người dùng trong cặp chìa khoá public-key cryptography đã đăng ký với server của dịch vụ. Mỗi khi người dùng login vào dịch vụ thì server dịch vụ gửi đến máy của người dùng một chuỗi thử thách (challenge), máy của người dùng giao chuỗi thử thách đó cho authenticator qua USB hoặc NFC hoặc Bluetooth, authenticator <a href="cryptocurrency">ký</a> chuỗi thử thách bằng private key rồi gửi trở lại server, server dùng public key của người dùng để kiểm xem chữ ký đó có khớp không. Private key của người dùng không bao giờ xuất hiện bên ngoài authenticator nên không sợ bị lộ. Authenticator có thể chứa vô số private key nên một người dùng với một authenticator có thể tạo tài khoản ở vô số dịch vụ, nhiều tài khoản ở cùng một dịch vụ. Authenticator đang dần trở nên phổ biến, đến một lúc nào đó người ta không cần password ở mọi nơi.
 <br>Biện pháp này chặt chẽ như vậy nhưng cũng không bảo vệ tuyệt đối được. Đã có trường hợp trong khi ngủ chủ tài khoản bị người cùng nhà dùng đầu ngón tay để thực hiện giao dịch chuyển tiền đi mất. Trong trường hợp không tin tưởng người cùng nhà thì nên tắt hoặc cất smartphone vào trong két sắt khi đi ngủ.</p>
 
+<h2>Digital Signing</h2>
+<p>Trong phần trên, chúng ta được biết authenticator hay security key chứa những cặp chìa khoá public-key cryptography của những tài khoản ở các nhà cung cấp dịch vụ, và authenticator sẽ ký chuỗi thử thách để người-dùng được login vào dịch vụ, gọi là xác thực danh tính, authentication.</p>
+<p>Cặp chìa khoá public-key cryptography còn được dùng để ký các chứng từ giao dịch, ví dụ file hợp đồng, file biên bản… Đó là ứng dụng chữ ký số. Mỗi người đều có thể tự dùng software để tạo ra cặp chìa khoá public-key cryptography, nhưng muốn cho chữ ký số được công nhận có giá trị thì phải mua từ các nhà cung cấp dịch vụ chữ ký số được cấp phép từ chính quyền và phải trả tiền hàng năm. Chữ ký số thường chứa trong một USB token hoặc chứa trong SIM điện thoại di động. Khi ký văn bản thì phần mềm ký sẽ tạo ra chuỗi hash từ văn bản, giao chuỗi hash cho USB token hoặc SIM điện thoại ký.</p>
+<p>Gần đây có một cách ký gọn hơn, đó là Remote Signing, ký trên smartphone. Khi cần ký, phần mềm ký sẽ tạo ra chuỗi hash từ văn bản, gửi chuỗi hash đó đến server của nhà cung cấp dịch vụ chữ ký số, server sẽ gửi chuỗi hash đó đến smartphone của người giữ chữ ký, smartphone ký và gửi kết quả trở lại server, server gửi kết quả trở lại cho phần mềm ký.</p>
+<p>Việc dùng chữ ký số đã rất phổ biến ở các doanh nghiệp Việt Nam vì các giấy tờ khai thuế và khai hải quan đều phải có chữ ký số để nộp qua mạng. Cá nhân thì không có nhu cầu dùng chữ ký số.</p>
+<p>Trong đại dịch Covid-19, Bộ Công An đã đưa ra app <a href="https://vneid.com" target='_blank'>VNeID</a> để người dân khai những nơi sắp đến, một việc không thực tế vì ngay cả khi đến trụ sở công an quận cũng không ai hỏi đến việc khai đó. Nhưng dường như app VNeID sẽ là một dịch vụ authentication và Remote Signing cho toàn dân. <a href="https://dichvucong.gov.vn/p/home/dvc-trang-chu.html" target='_blank'>Cổng dịch vụ công quốc gia</a> sẽ đổi sang xác thực danh tính bằng VNeID. Các ngân hàng cũng sẽ dùng VNeID để xác thực danh tính người-dùng và ký lệnh giao dịch.
+<br>Tui hình dung rằng hệ thống cung cấp dịch vụ sẽ hiện ra một QR code chứa chuỗi thử thách, người-dùng mở app VNeID scan QR-code đó, VNeID ký chuỗi thử thách bằng private key rồi gửi về hệ thống định danh điện tử, hệ thống định danh điện tử kiểm tra bằng public key rồi trả lời cho hệ thống cung cấp dịch vụ biết có đúng người hay không. Nếu mở dịch vụ trên smartphone thì app cung cấp dịch vụ sẽ gửi chuỗi thử thách thẳng qua app VNeID thay vì VNeID scan.
+<br>Khi cần ký lệnh giao dịch, hệ thống ngân hàng gửi chuỗi hash của lệnh đến server VNeID, server gửi chuỗi hash đến app VNeID, người-dùng xác nhận cho app VNeID ký chuỗi hash, chuỗi hash đã ký được gửi về server VNeID rồi gửi đến server ngân hàng để thực hiện giao dịch.</p>
 
 
 <h2>Di sản số</h2>
@@ -362,6 +370,7 @@ Có trường hợp nhân viên tính tiền ở cửa hàng cố nhớ hết th
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -390,6 +399,7 @@ Có trường hợp nhân viên tính tiền ở cửa hàng cố nhớ hết th
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
